src/objects/QTC_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>BASE__c</fullName>
        <label>BASE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CONTRACT__c</fullName>
        <label>CONTRACT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CURRENCY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CURRENCY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerItemXReferenceFlag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CustomerItemXReferenceFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerProductID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CustomerProductID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DESCRIPTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIVISION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DIVISION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCTYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOCTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCUMENTID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOCUMENTID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOCUMENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DOCUMENT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFFECTIVE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EFFECTIVE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXPIRATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EXPIRATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXTENDED__c</fullName>
        <label>EXTENDED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EquipmentFlag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EquipmentFlag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GENERATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GENERATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HOUR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HOUR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEMDESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ITEMDESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEMTYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ITEMTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ITEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LUCENT_ContextualDocType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LUCENT.ContextualDocType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LUCENT_ParentLineNum__c</fullName>
        <label>LUCENT_ParentLineNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterQuoteIndicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MasterQuoteIndicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PARTNER NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTNRID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PARTNRID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARTNRTYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PARTNRTYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purchase Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_BillingRuleCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Rule Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_Notification_email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QTC_ProductDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_QuoteProposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>QTC Transaction</relationshipLabel>
        <relationshipName>QTC_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTC_SAPStatus__c</fullName>
        <label>SAP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTC_SSFDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSF Product OI Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_SSFProductOI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSF Product OI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_StatusDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QTC_TransactionHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QTC Transaction Header</label>
        <referenceTo>QTC_Transaction__c</referenceTo>
        <relationshipLabel>QTC Transaction Line Items</relationshipLabel>
        <relationshipName>QTC_TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QTEID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QTEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTELINENUM__c</fullName>
        <label>QTELINENUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUALFNID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QUALFNID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUALFNVAL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QUALFNVAL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <label>QUANTITY</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Sub_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFQID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFQID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFQTYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFQTYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseller_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reseller Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundingAdjustment__c</fullName>
        <label>RoundingAdjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SALESORG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SALESORG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALESPERSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SALESPERSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetMasterQuoteIndicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SetMasterQuoteIndicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteLocation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SiteLocation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SiteName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASK__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TASK</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMEZONE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TIMEZONE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSPORT__c</fullName>
        <label>TRANSPORT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telco_CLLI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Telco CLLI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Transportation__c</fullName>
        <label>Total Transportation</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Price__c</fullName>
        <label>Transport Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HEADER</fullName>
                </value>
                <value>
                    <fullName>LINE ITEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyContractNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WarrantyContractNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>qualifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QTC Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Quote_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Name__c</columns>
        <columns>PARTNRTYPE__c</columns>
        <columns>PARTNRID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QTXN-{0000}</displayFormat>
        <label>QTC Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QTC Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>